--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     
 <section id= "baselImg">   
-  <img src="img/logo.jpg" class="d-block w-100" alt="...">        
+  <img src="img/logo.jpeg" class="d-block w-100" alt="...">        
 </section>
 
 <div id="socialLinks" class="container">
