--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
   <img src="img/logo.jpeg" class="d-block w-100" alt="...">        
 </section>
 
-<!-- <div id="socialLinks" class="container">
+<div id="socialLinks" class="container">
   <a href="https://instagram.com/induerefc"  ><i class="fab fa-instagram"></i></a>
-  <a href="https://www.facebook.com/induerefc/"><i class="fab fa-facebook-square"></i></a> -->
-  <!-- <a href="https://www.etsy.com/shop/JosiahsSketches"><i class="fab fa-etsy"></i> -->
+  <!-- <a href="https://www.facebook.com/induerefc/"><i class="fab fa-facebook-square"></i></a> --> 
+  <!-- <a href="https://www.etsy.com/shop/JosiahsSketches"><i class="fab fa-etsy"></i>
 </div>
 
 </div>
